--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/mocha": "^2.2.48",
     "@types/node": "^6.0.90",
     "@types/proxyquire": "^1.3.28",
+    "@types/serialport": "^6.0.1",
     "@types/sinon": "^4.1.3",
     "@types/sinon-chai": "^2.7.29",
     "@types/yargs": "^11.0.0",
@@ -50,6 +51,7 @@
   },
   "dependencies": {
     "debug": "^3.1.0",
+    "reflect-metadata": "^0.1.12",
     "serialport": "^6.1.1"
   },
   "scripts": {
