--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/yargs": "^11.0.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "colors": "^1.1.2",
+    "colors": "^1.2.1",
     "coveralls": "^3.0.0",
     "mocha": "^5.0.0",
     "nyc": "^11.4.1",
@@ -44,6 +44,7 @@
     "sinon": "^4.2.2",
     "sinon-chai": "^2.14.0",
     "source-map-support": "^0.5.3",
+    "supports-color": "^5.3.0",
     "ts-node": "^4.1.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.1",
