--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/chai": "^4.1.2",
     "@types/chai-as-promised": "^7.1.0",
     "@types/debug": "0.0.30",
+    "@types/fs-extra": "^5.0.5",
     "@types/mocha": "^2.2.48",
     "@types/node": "^6.0.90",
     "@types/proxyquire": "^1.3.28",
@@ -53,6 +54,7 @@
   "dependencies": {
     "alcalzone-shared": "^1.4.0",
     "debug": "^3.1.0",
+    "fs-extra": "^7.0.1",
     "reflect-metadata": "^0.1.12",
     "serialport": "^6.1.1"
   },
