--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Z-Wave driver written entirely in JavaScript/TypeScript",
   "keywords": [],
-  "main": "build/index.js",
+  "main": "test/run.js",
   "types": "build/index.d.ts",
   "author": {
     "name": "AlCalzone",
@@ -37,7 +37,7 @@
     "colors": "^1.2.1",
     "coveralls": "^3.0.0",
     "mocha": "^5.0.0",
-    "nyc": "^11.4.1",
+    "nyc": "^13.1.0",
     "proxyquire": "^1.8.0",
     "rimraf": "^2.6.2",
     "semver": "^5.5.0",
