Allow testing with the test explorer

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "build": "tsc",
     "prebuild": "rimraf ./build",
     "watch": "tsc --watch",
-    "test:ts": "node_modules/.bin/mocha",
+    "test:ts": "mocha",
+    "test:watch": "mocha --watch",
     "test": "npm run test:ts",
     "coverage": "node_modules/.bin/nyc npm test",
     "coveralls": "node_modules/.bin/nyc report --reporter=text-lcov | coveralls -v",
