Add the possibility to restore the network state from cache

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,8 @@
 			"outFiles": [
 				"${workspaceFolder}/**/*.js"
 			],
-			"console": "integratedTerminal"
+			"console": "integratedTerminal",
+			"preLaunchTask": "npm: build"
 		}
 	]
 }
