--- a/package.json
+++ b/package.json
@@ -25,30 +25,21 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/chai-as-promised": "^7.1.0",
     "@types/debug": "4.1.2",
     "@types/fs-extra": "^5.0.5",
+    "@types/jest": "^24.0.9",
     "@types/mocha": "^5.2.6",
     "@types/node": "^6.0.90",
-    "@types/proxyquire": "^1.3.28",
     "@types/serialport": "^7.0.1",
-    "@types/sinon": "^7.0.8",
-    "@types/sinon-chai": "^3.2.2",
     "@types/yargs": "^12.0.9",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "colors": "^1.3.3",
     "coveralls": "^3.0.3",
-    "mocha": "^6.0.2",
-    "nyc": "^13.3.0",
-    "proxyquire": "^2.1.0",
+    "jest": "^24.1.0",
+    "jest-extended": "^0.11.1",
     "rimraf": "^2.6.3",
     "semver": "^5.6.0",
-    "sinon": "^7.2.5",
-    "sinon-chai": "^3.3.0",
-    "source-map-support": "^0.5.10",
     "supports-color": "^6.1.0",
+    "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.13.0",
     "typescript": "^3.3.3333",
@@ -64,41 +55,18 @@
   "scripts": {
     "build": "tsc",
     "prebuild": "rimraf ./build",
+    "prewatch": "rimraf ./build",
     "watch": "tsc --watch",
-    "test:ts": "mocha",
-    "test:watch": "mocha --watch",
-    "test": "npm run test:ts",
-    "coverage": "node_modules/.bin/nyc npm test",
+    "test:ts": "jest",
+    "test:watch": "jest --watch",
+    "test": "npm run test:watch",
+    "coverage": "jest --collect-coverage",
     "coveralls": "node_modules/.bin/nyc report --reporter=text-lcov | coveralls -v",
     "show-coverage": "npm run coverage && start ./coverage/index.html",
     "lint:ts": "tslint",
     "lint": "npm run lint:ts \"src/**/*.ts\"",
     "release": "node --require ts-node/register maintenance/release.ts",
     "usbdebug": "cmd.exe /c \"test\\usbdebug.bat\""
-  },
-  "nyc": {
-    "all": true,
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "build/**",
-      "src/**/*.test.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "require": [
-      "ts-node/register",
-      "source-map-support/register"
-    ],
-    "reporter": [
-      "text-summary",
-      "html",
-      "lcov"
-    ],
-    "sourceMap": true,
-    "instrument": true
   },
   "readme": "README.md"
 }
