--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,12 @@
         "inlineSourceMap": false,
         "stripInternal": true,
         "target": "es2015",
+        "skipLibCheck": true,
         // This is incompatible with serialize/deserialize
         // "strictPropertyInitialization": true,
         // "strictNullChecks": true,
         "watch": false, // true breaks circleci
-        "pretty": true
+        "pretty": true,
     },
     "include": [
         "src/**/*.ts"
