--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,5 @@
 	"typescript.tsdk": "node_modules\\typescript\\lib",
 	"jest.showCoverageOnLoad": true,
 	"jest.enableCodeLens": true,
-	"coverage-gutters.showGutterCoverage": false,
-	"coverage-gutters.showRulerCoverage": true
+	"jest.autoEnable": false
 }
