--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
 	"typescript.tsdk": "node_modules\\typescript\\lib",
 	"jest.showCoverageOnLoad": true,
-	"jest.enableCodeLens": true,
-	"jest.autoEnable": false
+	"jest.enableCodeLens": true
 }
