Remove @types/mocha, disable noImplicitAny in tests

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,6 +3,7 @@
 	"compilerOptions": {
 		"noEmit": false,
 		"declaration": true,
+		"noImplicitAny": true
 	},
 	"include": ["./**/*.ts"],
 	"exclude": ["./**/*.test.ts"]
