--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "noEmitOnError": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "outDir": "build/",
         "removeComments": false,
         "experimentalDecorators": true,
