Try fixing the path classifiers on LGTM

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,3 +1,8 @@
 path_classifiers:
   generated:
-    - build
+    - exclude: /
+    - build/**/*.*
+  test:
+    - exclude: /
+    - test
+    - src/**/*.test.ts
