--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
 			"name": "Launch Program",
 			"program": "${workspaceFolder}/test/run.js",
 			"env": {
-				"DEBUG": "zwave:(controller|io)",
+				"DEBUG": "zwave:(controller)",
 				"NO_CACHE": "true"
 			},
 			"outFiles": [
@@ -18,7 +18,7 @@
 			],
 			"console": "integratedTerminal",
 			"sourceMaps": true,
-			"preLaunchTask": "npm: build"
+			// "preLaunchTask": "npm: build"
 		}
 	]
 }
