--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   "devDependencies": {
     "@fimbul/mithotyn": "^0.18.0",
     "@fimbul/wotan": "^0.19.0",
+    "@types/ansi-colors": "^3.2.0",
     "@types/debug": "4.1.2",
     "@types/fs-extra": "^5.0.5",
     "@types/jest": "^24.0.9",
     "@types/node": "^6.14.4",
     "@types/serialport": "^7.0.1",
     "@types/yargs": "^12.0.9",
+    "ansi-colors": "^3.2.4",
     "colors": "^1.3.3",
     "coveralls": "^3.0.3",
     "jest": "^24.1.0",
@@ -67,7 +69,8 @@
     "lint:ts": "tslint \"src/**/*.ts\"",
     "lint:wotan": "wotan",
     "lint": "npm run lint:ts && npm run lint:wotan",
-    "release": "node --require ts-node/register maintenance/release.ts",
+    "release": "ts-node maintenance/release.ts",
+    "implemented_ccs": "ts-node maintenance/implemented_ccs.ts",
     "usbdebug": "cmd.exe /c \"test\\usbdebug.bat\""
   },
   "readme": "README.md"
