--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "prebuild": "rimraf ./build || true",
     "prewatch": "rimraf ./build || true",
     "watch": "tsc -p src --watch",
-    "test:ts": "jest",
-    "test:watch": "jest --watch",
+    "test:ts": "jest --maxWorkers=1",
+    "test:watch": "npm run test:ts -- --watch",
     "test": "npm run test:watch",
     "coverage": "jest --collect-coverage",
     "coveralls": "node_modules/.bin/nyc report --reporter=text-lcov | coveralls -v",
