Add more dotfiles to the whitelist

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,10 @@ whitelist: &whitelist
     - src/*
     - test/*
     - coverage/*
+    - .fimbullinter.yaml
     - .npmignore
+    - .wotanrc.yaml
+    - jest.config.js
     - package.json
     - README.md
     - tsconfig.json
