--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "test:watch": "npm run test:ts -- --watch",
     "test": "npm run test:watch",
     "coverage": "npm run test:ts -- --collect-coverage",
-    "coveralls": "node_modules/.bin/nyc report --reporter=text-lcov | coveralls -v",
+    "coveralls": "npm run coverage -- --reporter=text-lcov | coveralls -v",
     "show-coverage": "npm run coverage && start ./coverage/index.html",
     "lint:ts": "tslint \"src/**/*.ts\"",
     "lint:wotan": "wotan",
