Implement (de)serialization of CC values from the cache

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
 			"program": "${workspaceFolder}/test/run.js",
 			"env": {
 				"DEBUG": "zwave:(controller)",
-				"NO_CACHE": "true"
+				// "NO_CACHE": "true"
 			},
 			"outFiles": [
 				"${workspaceFolder}/**/*.js"
