--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "@types/node": "^11.12.1",
     "@types/serialport": "^7.0.1",
     "@types/yargs": "^13.0.0",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "ansi-colors": "^3.2.4",
     "colors": "^1.3.3",
     "coveralls": "^3.0.3",
+    "eslint": "^5.16.0",
     "jest": "^24.1.0",
     "jest-extended": "^0.11.1",
     "rimraf": "^2.6.3",
@@ -45,7 +48,6 @@
     "supports-color": "^6.1.0",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
-    "tslint": "^5.13.1",
     "typescript": "^3.4.1",
     "yargs": "^13.2.2"
   },
@@ -68,7 +70,7 @@
     "coverage": "npm run test:ts -- --collect-coverage",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls -v",
     "show-coverage": "npm run coverage && start ./coverage/index.html",
-    "lint:ts": "tslint \"src/**/*.ts\"",
+    "lint:ts": "eslint --ext .ts src --quiet",
     "lint:wotan": "wotan",
     "lint": "npm run lint:ts && npm run lint:wotan",
     "release": "ts-node maintenance/release.ts",
