--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
     "colors": "^1.3.3",
     "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "jest": "^24.1.0",
     "jest-extended": "^0.11.1",
+    "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
     "semver": "^6.0.0",
     "supports-color": "^6.1.0",
@@ -70,7 +73,7 @@
     "coverage": "npm run test:ts -- --collect-coverage",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls -v",
     "show-coverage": "npm run coverage && start ./coverage/index.html",
-    "lint:ts": "eslint --ext .ts src --quiet",
+    "lint:ts": "eslint --ext .ts src",
     "lint:wotan": "wotan",
     "lint": "npm run lint:ts && npm run lint:wotan",
     "release": "ts-node maintenance/release.ts",
