--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,9 @@
 {
 	"recommendations": [
 		"rebornix.project-snippets",
-		"ms-vscode.vscode-typescript-tslint-plugin",
+		"dbaeumer.vscode-eslint",
+		"Orta.vscode-jest",
+		"esbenp.prettier-vscode",
+		"EditorConfig.EditorConfig"
 	]
 }
