--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,9 @@
 		"stripInternal": true,
 		"target": "es2017",
 		"skipLibCheck": true,
+		"strictNullChecks": true,
 		// This is incompatible with serialize/deserialize
 		// "strictPropertyInitialization": true,
-		// "strictNullChecks": true,
 		"watch": false, // true breaks circleci
 		"pretty": true
 	},
