Fix a bunch of tests, disable the others

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "^24.1.0",
+    "jest-circus": "^24.7.1",
     "jest-extended": "^0.11.1",
     "prettier": "^1.17.0",
     "rimraf": "^2.6.3",
