Handle dying and resurrection of nodes
Fixes: #52

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,8 +17,8 @@
 				"${workspaceFolder}/test/run.ts"
 			],
 			"env": {
-				"DEBUG": "zwave:(controller|io)",
-				"NO_CACHE": "false"
+				"DEBUG": "zwave:(controller)"
+				// "NO_CACHE": "true"
 			},
 			"console": "integratedTerminal",
 			"sourceMaps": true
