Remove Ping from the node interview stages
Instead ping every time before starting a node interview

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,8 @@
 		}
 	},
 	"files.exclude": {
-		"node_modules/": true,
-		"coverage/": true,
-		".*": true
+		"node_modules/": false,
+		"coverage/": false,
+		".*": false
 	}
 }
