--- a/src/tsconfig.build.json
+++ b/src/tsconfig.build.json
@@ -3,6 +3,7 @@
 	"compilerOptions": {
 		"noEmit": false,
 		"declaration": true,
+		"declarationMap": true,
 		"noImplicitAny": true
 	},
 	"include": ["./**/*.ts"],
