--- a/package.json
+++ b/package.json
@@ -66,8 +66,9 @@
   },
   "scripts": {
     "build": "tsc -p src/tsconfig.build.json",
-    "prebuild": "rimraf ./build || true",
-    "prewatch": "rimraf ./build || true",
+    "generateCCAPIInterface": "ts-node maintenance/generateCCAPIInterface.ts",
+    "prebuild": "rimraf ./build && npm run generateCCAPIInterface",
+    "prewatch": "rimraf ./build && npm run generateCCAPIInterface",
     "watch": "tsc -p src/tsconfig.build.json --watch",
     "test:reset": "jest --clear-cache",
     "test:ts": "jest --maxWorkers=1",
