--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.6.1",
+    "@commitlint/config-conventional": "^7.6.0",
     "@fimbul/mithotyn": "^0.18.0",
     "@fimbul/wotan": "^0.20.0",
     "@types/ansi-colors": "^3.2.0",
@@ -40,10 +42,13 @@
     "@typescript-eslint/parser": "^1.6.0",
     "ansi-colors": "^3.2.4",
     "colors": "^1.3.3",
+    "commitizen": "^3.1.1",
     "coveralls": "^3.0.3",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^2.3.0",
     "jest": "^24.1.0",
     "jest-circus": "^24.7.1",
     "jest-extended": "^0.11.1",
@@ -84,7 +89,18 @@
     "lint": "npm run lint:ts && npm run lint:wotan",
     "release": "ts-node maintenance/release.ts",
     "implemented_ccs": "ts-node maintenance/implemented_ccs.ts",
-    "usbdebug": "cmd.exe /c \"test\\usbdebug.bat\""
+    "usbdebug": "cmd.exe /c \"test\\usbdebug.bat\"",
+    "commit": "git-cz"
   },
-  "readme": "README.md"
+  "readme": "README.md",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
